Updated CLI and Node.js SDK to include new Virtual Instances API methods
Summary: Updated CLI and Node.js SDK to include new Virtual Instances API methods

Test Plan: N/A

Reviewers: #product

Differential Revision: https://rockset.phacility.com/D9594
