# packages/cli/src/generator/swagger-generated.yaml
@@ -20,6 +20,7 @@ tags:
 - name: "Queries"
 - name: "Query Lambdas"
 - name: "Users"
+- name: "Virtual Instances"
 - name: "Workspaces"
 schemes:
 - "https"
@@ -41,23 +42,6 @@ paths:
           description: "organization retrieved successfully"
           schema:
             $ref: "#/definitions/OrganizationResponse"
-  /v1/orgs/self/activity:
-    get:
-      tags:
-      - "Organizations"
-      summary: "Get Organization Recent Activity"
-      description: "Get information about organization's recent activity."
-      operationId: "getOrganizationRecentActivity"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters: []
-      responses:
-        200:
-          description: "organization recent activity retrieved successfully"
-          schema:
-            $ref: "#/definitions/OrgRecentActivityResponse"
   /v1/orgs/self/aliases:
     get:
       tags:
@@ -498,6 +482,72 @@ paths:
           description: "API key deleted successfully"
           schema:
             $ref: "#/definitions/DeleteApiKeyResponse"
+  /v1/orgs/self/virtualinstances:
+    get:
+      tags:
+      - "Virtual Instances"
+      summary: "List Virtual Instances"
+      description: "Retrieve all virtual instances in an organization."
+      operationId: "listVirtualInstances"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "virtual instances retrieved successfully"
+          schema:
+            $ref: "#/definitions/ListVirtualInstancesResponse"
+  /v1/orgs/self/virtualinstances/{virtualInstanceId}:
+    get:
+      tags:
+      - "Virtual Instances"
+      summary: "Get Virtual Instance"
+      description: "Get details about a virtual instance."
+      operationId: "getVirtualInstance"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "virtualInstanceId"
+        in: "path"
+        description: "uuid of the virtual instance"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "virtual instance retrieved successfully"
+          schema:
+            $ref: "#/definitions/GetVirtualInstanceResponse"
+    post:
+      tags:
+      - "Virtual Instances"
+      summary: "Update Virtual Instance"
+      description: "Update the size of a virtual instance."
+      operationId: "setVirtualInstance"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "virtualInstanceId"
+        in: "path"
+        description: "uuid of the virtual instance"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "body"
+        description: "JSON object"
+        required: true
+        schema:
+          $ref: "#/definitions/UpdateVirtualInstanceRequest"
+      responses:
+        200:
+          description: "virtual instance updated successfully"
+          schema:
+            $ref: "#/definitions/UpdateVirtualInstanceResponse"
   /v1/orgs/self/ws:
     get:
       tags:
@@ -1639,11 +1689,21 @@ definitions:
         description: "list of mappings applied on all documents in a collection"
         items:
           $ref: "#/definitions/FieldMappingV2"
+      field_partitions:
+        type: "array"
+        description: "list of partitions for a collection"
+        items:
+          $ref: "#/definitions/FieldPartition"
       aliases:
         type: "array"
         description: "list of aliases for a collection"
         items:
           $ref: "#/definitions/Alias"
+      field_schemas:
+        type: "array"
+        description: "list of field schemas "
+        items:
+          $ref: "#/definitions/FieldSchema"
   CollectionStats:
     type: "object"
     properties:
@@ -1792,6 +1852,16 @@ definitions:
         description: "list of mappings"
         items:
           $ref: "#/definitions/FieldMappingV2"
+      field_partitions:
+        type: "array"
+        description: "list of field partitions"
+        items:
+          $ref: "#/definitions/FieldPartition"
+      field_schemas:
+        type: "array"
+        description: "list of field schemas"
+        items:
+          $ref: "#/definitions/FieldSchema"
   CreateCollectionResponse:
     type: "object"
     properties:
@@ -2192,6 +2262,57 @@ definitions:
       args:
         type: "object"
     description: "Field masking function name + args. The args is a JSON object."
+  FieldOptions:
+    type: "object"
+    properties:
+      index_mode:
+        type: "string"
+        example: "index"
+        description: " index or no_index"
+      range_index_mode:
+        type: "string"
+        example: "v1_index"
+        description: " v1_index or no_index"
+      type_index_mode:
+        type: "string"
+        example: "index"
+        description: " index or no_index"
+      column_index_mode:
+        type: "string"
+        example: "store"
+        description: " store or no_store"
+  FieldPartition:
+    type: "object"
+    properties:
+      field_name:
+        type: "string"
+        example: "address.city.zipcode"
+        description: "The name of a field, parsed as a SQL qualified name"
+      type:
+        type: "string"
+        example: "AUTO"
+        description: "The type of partitions on a field"
+        enum:
+        - "AUTO"
+      keys:
+        type: "array"
+        example: "Values of a record to partition on. This is not needed if the partition\
+          \ type is AUTO"
+        description: "The values for partitioning of a field"
+        items:
+          type: "string"
+  FieldSchema:
+    type: "object"
+    properties:
+      field_name:
+        type: "string"
+        example: "address.city.zipcode"
+        description: "The name of a field, parsed as a SQL qualified name"
+      field_options:
+        example: "Options to specify whether to build an inverted index  a type index,\
+          \ a range index and a column index on this field"
+        description: "The indexing options for a field"
+        $ref: "#/definitions/FieldOptions"
   FormatParams:
     type: "object"
     properties:
@@ -2235,6 +2356,12 @@ definitions:
       data:
         description: "integration object"
         $ref: "#/definitions/Integration"
+  GetVirtualInstanceResponse:
+    type: "object"
+    properties:
+      data:
+        description: "virtual instance that was requested"
+        $ref: "#/definitions/VirtualInstance"
   GetWorkspaceResponse:
     type: "object"
     properties:
@@ -2420,6 +2547,14 @@ definitions:
         description: "list of users"
         items:
           $ref: "#/definitions/User"
+  ListVirtualInstancesResponse:
+    type: "object"
+    properties:
+      data:
+        type: "array"
+        description: "list of all virtual instances"
+        items:
+          $ref: "#/definitions/VirtualInstance"
   ListWorkspacesResponse:
     type: "object"
     properties:
@@ -2474,26 +2609,11 @@ definitions:
         type: "string"
         example: "2001-08-28T00:23:41Z"
         description: "ISO-8601 date"
-  OrgRecentActivity:
-    type: "object"
-    properties:
-      last_activity_millis:
-        type: "integer"
-        format: "int64"
-      activity_type:
-        type: "string"
-      scheduled_deletion_time_millis:
-        type: "integer"
-        format: "int64"
-  OrgRecentActivityResponse:
-    type: "object"
-    properties:
-      data:
-        description: "OrgRecentActivity object"
-        $ref: "#/definitions/OrgRecentActivity"
   Organization:
     type: "object"
     properties:
+      deletionScheduledAt:
+        type: "string"
       id:
         type: "string"
         example: "rockset"
@@ -2879,6 +2999,11 @@ definitions:
         format: "int64"
         example: 126
         description: "query time in milliseconds"
+      throttled_time_micros:
+        type: "integer"
+        format: "int64"
+        example: 126
+        description: "time query was throttled by admission control"
   RedshiftIntegration:
     type: "object"
     required:
@@ -3346,6 +3471,45 @@ definitions:
       sql:
         description: "Query Lambda SQL query"
         $ref: "#/definitions/QueryLambdaSql"
+  UpdateVirtualInstanceRequest:
+    type: "object"
+    required:
+    - "new_size"
+    properties:
+      new_size:
+        type: "string"
+        example: "LARGE"
+        description: "requested virtual instance size"
+        enum:
+        - "FREE"
+        - "SHARED"
+        - "SMALL"
+        - "MEDIUM"
+        - "LARGE"
+        - "XLARGE"
+        - "XLARGE2"
+        - "XLARGE4"
+        - "XLARGE8"
+        - "XLARGE16"
+      new_type:
+        type: "string"
+        enum:
+        - "FREE"
+        - "SHARED"
+        - "SMALL"
+        - "MEDIUM"
+        - "LARGE"
+        - "XLARGE"
+        - "XLARGE2"
+        - "XLARGE4"
+        - "XLARGE8"
+        - "XLARGE16"
+  UpdateVirtualInstanceResponse:
+    type: "object"
+    properties:
+      data:
+        description: "virtual instance that was switched"
+        $ref: "#/definitions/VirtualInstance"
   User:
     type: "object"
     required:
@@ -3419,6 +3583,86 @@ definitions:
         description: "list of parameters specified in query"
         items:
           type: "string"
+  VirtualInstance:
+    type: "object"
+    properties:
+      state:
+        type: "string"
+        example: "ACTIVE"
+        description: "virtual instance state"
+        enum:
+        - "PROVISIONING_RESOURCES"
+        - "REBALANCING_COLLECTIONS"
+        - "ACTIVE"
+        - "DELETED"
+      current_type:
+        type: "string"
+        enum:
+        - "FREE"
+        - "SHARED"
+        - "SMALL"
+        - "MEDIUM"
+        - "LARGE"
+        - "XLARGE"
+        - "XLARGE2"
+        - "XLARGE4"
+        - "XLARGE8"
+        - "XLARGE16"
+      desired_type:
+        type: "string"
+        enum:
+        - "FREE"
+        - "SHARED"
+        - "SMALL"
+        - "MEDIUM"
+        - "LARGE"
+        - "XLARGE"
+        - "XLARGE2"
+        - "XLARGE4"
+        - "XLARGE8"
+        - "XLARGE16"
+      current_size:
+        type: "string"
+        example: "MEDIUM"
+        description: "virtual instance current size"
+        readOnly: true
+        enum:
+        - "FREE"
+        - "SHARED"
+        - "SMALL"
+        - "MEDIUM"
+        - "LARGE"
+        - "XLARGE"
+        - "XLARGE2"
+        - "XLARGE4"
+        - "XLARGE8"
+        - "XLARGE16"
+      desired_size:
+        type: "string"
+        example: "MEDIUM"
+        description: "virtual instance desired size"
+        readOnly: true
+        enum:
+        - "FREE"
+        - "SHARED"
+        - "SMALL"
+        - "MEDIUM"
+        - "LARGE"
+        - "XLARGE"
+        - "XLARGE2"
+        - "XLARGE4"
+        - "XLARGE8"
+        - "XLARGE16"
+      default_pod_count:
+        type: "integer"
+        format: "int32"
+      scaled_pod_count:
+        type: "integer"
+        format: "int32"
+      id:
+        type: "string"
+        example: "123e4567-e89b-12d3-a456-556642440000"
+        description: "unique identifier for virtual instance"
   Workspace:
     type: "object"
     properties:
